Added support for ephemeral volumes and ingress creation support
